Collections card view - fix author field overflow for long author names (#1677)
such as `approval_dashboard_namespace_test_additional_data`

No-Issue

--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -30,6 +30,11 @@
     width: 100%;
   }
 
+  .author .pf-c-content small {
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
   .type-label {
     font-size: var(--pf-global--FontSize--xs);
     color: var(--pf-global--color--200);
